@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-06-10  Piotr Ożarowski
+	* Restoring from backup finally works with external databases
+
 2009-06-08  Piotr Ożarowski
 	* Restoring from backup to PostgreSQL/MySQL partially works via merging
 
